--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<h6>Breve Historia</h6>
 				<div class="card">
 				    <div class="card-image waves-effect waves-light">
-				      <img class="activator" src="css/img/profile1.png">
+				      <img class="activator" src="css/img/profile1.PNG">
 				    </div>
 				    <div class="card-content">
 				      <div class="card-title activator grey-text text-darken-4">
