--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<hr>
 		<div class="col s12 center" id="social-icons">
 			<a href="https://twitter.com/asrt176"><img src="css/img/Twitter.svg" width="48" height="48" alt="Twitter" /></a>
-			<a href="http://www.linkedin.com/in/annonip"><img src="css/img/LinkedIn.svg" width="48" height="48" alt="LinkedIn" /></a>
+			<a href="http://www.linkedin.com/mwlite/in/ahiezer-rivas-34379315"><img src="css/img/LinkedIn.svg" width="48" height="48" alt="LinkedIn" /></a>
 			<a href="http://www.facebook.com/profile.php?id=1013011995&ref=content_filter"><img src="css/img/Facebook.svg" width="48" height="48" alt="Facebook" /></a>
 		</div>
 	</div>
