--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<div class="intro deep-orange lighten-2 z-depth-1">
 		<h1 class="grey-text text-lighten-5">Ahiezer Samuel Rivas Trejo<span class="green-text">.</span></h1>
-		<h5 class="grey lighten-4 light-blue-text text-darken-1">AHora esto va a ser una tienda</h5>
+		<h5 class="grey lighten-4 light-blue-text text-darken-1">Amante de la Infórmatica</h5>
 	</div>
 
 	<div class="container about">
@@ -96,7 +96,7 @@
 	<footer>
 		<div class="footer">
 			<div class="container center-align">
-				<span>Made with <i class="material-icons tiny">favorite</i> by @ju4nm4rt1n</span>
+				<span>Made with <i class="material-icons tiny">favorite</i> by Ahiezer </span>
 				<a class="grey-text text-lighten-4 right" href="#!">Link</a>
 			</div>
 		</div>
