actualizando mas informatica

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 				<ul class="collapsible">
 					<li class="active">
 						<div class="collapsible-header"><i class="mdi-av-web"></i>Perfil</div>
-						<div class="collapsible-body"><p>He realizado distintos trabajos a lo largo de 11 años, desde ser cablista liniero en la extinta Electricidad de Caracas, ahora con el nombre de Corpoelec, estudie informatica y realizé para mi proyecto de grado un traductor de Lenguaje de Señas Venezolana.</p></div>
+						<div class="collapsible-body"><p>Estudie informatica  y realizé para mi proyecto de grado un traductor de Lenguaje de Señas Venezolana en NodeJS del lado del Servidor y Html Sencillo junto con Vainilla Javascript.</p></div>
 					</li>
 					<li>
 						<div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>Experiencia</div>
-						<div class="collapsible-body"><p>En la parte Electrica desde Instalar postes, cableado, transformadores. En la parte informatica soporte técnico, instalación de redes y realización de paginas web</p></div>
+						<div class="collapsible-body"><p>En la parte informatica he trabajado en Protección Civil desde soporte técnico, instalación de redes y realización de paginas web en, ya que como no habia una segmentación del area se tenia que ser integral para el departamento. Tambien en desarrollado paginas en PrestaShop, y actualmente estoy trabajando en SPI en donde estoy laborando como Analista de Soporte en Sitio, sin embargo me mantengo al dia desarrollando páginas en ReactJs, Laravel Y Angular</p></div>
 					</li>
 					<li>
 						<div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>Educación</div>
