--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</li>
 					<li>
 						<div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>Experiencia</div>
-						<div class="collapsible-body"><p>En la parte informatica he trabajado en Protección Civil desde soporte técnico, instalación de redes y realización de paginas web en, ya que como no habia una segmentación del area se tenia que ser integral para el departamento. Tambien en desarrollado paginas en PrestaShop, y actualmente estoy trabajando en SPI en donde estoy laborando como Analista de Soporte en Sitio, sin embargo me mantengo al dia desarrollando páginas en ReactJs, Laravel Y Angular</p></div>
+						<div class="collapsible-body"><p>En la parte informatica he trabajado en Protección Civil desde soporte técnico, instalación de redes y realización de paginas web en Wordpress, ya que como no habia una segmentación del area se tenia que ser integral para el departamento. Tambien en desarrollado paginas en PrestaShop, y actualmente estoy trabajando en SPI en donde estoy laborando como Analista de Soporte en Sitio en el cual brindo ayuda al personal de Banesco tanto en sitio como remoto en la instalación de programas configuración de los mismos, configuración de ODBC si estos programas necesitan conectarse a una base de datos, y determinar si los problemas que puedan presentarse nos corresponde como área de soporte o derivarlos al área correspondiente , sin embargo me mantengo al dia desarrollando páginas en ReactJs, Laravel Y Angular, Ademas de familiarizarme con el lenguaje de base de datos en SQL y NoSQL como son MySQL y MOONGODB</p></div>
 					</li>
 					<li>
 						<div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>Educación</div>
